package center;

option java_package = "hc.center";
option java_outer_classname = "CenterProto";

message CenterCreateServerConnectReq {
   	required string msg = 1;
}

message CenterCreateServerConnectRsp {
  	required string msg = 1;
}

message CenterServerCheckReq{
	required string check = 1;
}

message CenterServerCheckRsp{
	required string check = 1;
}

message CenterServerMessageAskReq{
	required string msg = 1;
}

message CenterServerMessageAskRsp{
	required int32 serverID = 1;
	required int32 serverType = 2;
	required string serverName = 3;
	required string jsonMsg = 4;
}

message CenterServerResult{
	required bool result = 1;
}